--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 CMakeLists.txt.user
  *.pro.user
+cmake_install.cmake
+2labaRaspberry
+libTsezarLib.a
+stFN5Z0e
+stlhNhYg
+stuzeba
+CMakeFiles
+CMakeLists.txt
+CMakeCache.txt
+CMakeFiles
+Makefile
+
