Correction error of methods and check program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 2.8)
+﻿cmake_minimum_required(VERSION 2.8)
 
 project(1labaRaspberry)
-add_executable(${PROJECT_NAME} "main.cpp")
+set(SRC MyClass.h MyClass.cpp)
+add_executable(${PROJECT_NAME} "main.cpp" ${SRC})
